// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test model-style test <ConfirmButton /> snapshot. 1`] = `
.c0 {
  padding: 10px 15px;
  margin: 0 5px;
  background-color: #5AC9E8;
  color: #FFF;
  font-size: .8rem;
  cursor: pointer;
  border-radius: 2px;
}

<div
  class="c0"
/>
`;

exports[`test model-style test <ModelContent /> snapshot. 1`] = `
.c0 {
  width: 100%;
  padding: 0 0 20px 0;
}

<div
  class="c0"
/>
`;

exports[`test model-style test <ModelFooter /> snapshot. 1`] = `
.c0 {
  width: 100%;
  padding: 0 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="c0"
/>
`;

exports[`test model-style test <ModelShadow /> snapshot. 1`] = `
.c0 {
  position: fixed;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  background-color: rgba(0,0,0,.3);
  z-index: 10;
}

<div
  class="c0"
/>
`;

exports[`test model-style test <ModelWrap /> snapshot. 1`] = `
.c0 {
  position: fixed;
  left: 50%;
  top: 50%;
  width: 250px;
  max-width: 90%;
  background-color: #fff;
  z-index: 11;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  border-radius: 5px;
  padding: 20px 15px 15px;
  font-family: Arial,serif;
}

<div
  class="c0"
/>
`;
